User Login and Sign Up
I added the User log in and Sign up function.

--- a/Users/templates/Users/add.html
+++ b/Users/templates/Users/add.html
@@ -23,7 +23,7 @@
 
                     <label for="field1"><span>UserName <span class="required">*</span></span><input type="text" class="input-field" name="username"  value=""></label>
                     <label for="field2"><span>Password <span class="required">*</span></span><input type="password" class="input-field" name="password" value=""  /></label>
-                    <label for="field3"><span>Birthday <span class="required">*</span></span><input type="date" class="input-field" name="birth_date" value={{birth_date | date:"Y-m-d"}} /></label>
+                    <label for="field3"><span>Birthday <span class="required">*</span></span><input type="date" class="input-field" name="birthday" value={{birthday | date:"Y-m-d"}} /></label>
                     <label for="field4"><span>RandomId <span class="required">*</span></span><input type="number" class="input-field" name="randomId" value={{randomId}} /></label>
 
                     <button type="submit" class="btn btn-primary">Add</button>
