--- a/Users/templates/Users/del.html
+++ b/Users/templates/Users/del.html
@@ -23,7 +23,7 @@
 
                     <label for="field1"><span>UserName <span class="required">*</span></span><input type="text" class="input-field" name="username" value={{user.username}} /></label>
                     <label for="field2"><span>Password <span class="required">*</span></span><input type="email" class="input-field" name="password" value={{user.password}} /></label>
-                    <label for="field3"><span>Birthday <span class="required">*</span></span><input type="date" class="input-field" name="birth_date" value={{user.birth_date | date:"Y-m-d"}} /></label>
+                    <label for="field3"><span>Birthday <span class="required">*</span></span><input type="date" class="input-field" name="birthday" value={{user.birthday | date:"Y-m-d"}} /></label>
                     <label for="field4"><span>RandomNumber <span class="required">*</span></span><input type="number" class="input-field" name="randomId" value={{user.randomId}} /></label>
 
                     <button type="submit" class="btn btn-primaryy">Delete</button>
