Main user management
I added the user login sign up and post.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Audiowide);
 
 body {
-  padding-top: 70px;
+  padding-top: 40px;
+  background-color: red;
 }
 
 header .navbar-brand {
