--- a/board/static/css/board.css
+++ b/board/static/css/board.css
@@ -1,8 +1,8 @@
-.blogs{
+.boards{
 	margin-top: 2em;
 }
 
-.remove-blog {
+.remove-board {
   color: #bbbbbb; 
   font-size: .8em; 
   padding-top: .2em;
