--- a/core/templates/password.html
+++ b/core/templates/password.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% get_available_languages as LANGUAGES %}
-{% get_current_language as CURRENT_LANGUAGE %}
 
-{% block title %}Account Settings{% endblock %}
+{% block title %}{% trans 'Account Settings' %}{% endblock %}
 
 {% block main %}
   <div class="page-header">
@@ -11,7 +9,7 @@
   </div>
   <div class="row" style="margin-top: 2em">
     <div class="col-md-3">
-      {% include 'core/partial_settings_menu.html' with active='profile' %}
+      {% include 'partial_settings_menu.html' with active='password' %}
     </div>
     <div class="col-md-9">
       {% if messages %}
@@ -22,13 +20,14 @@
           </div>
         {% endfor %}
       {% endif %}
-      <h3 style="margin-top: 0">{% trans 'Edit Profile' %}</h3>
-      <form role="form" class="form-horizontal" method="post" action="{% url 'settings' %}">
+      <h3 style="margin-top: 0">{% trans 'Change Password' %}</h3>
+      <form role="form" class="form-horizontal" method="post" action="{% url 'password' %}">
         {% csrf_token %}
+        {{ form.id }}
         {% for field in form.visible_fields %}
           <div class="form-group{% if field.errors %} has-error{% endif %}">
-            <label for="{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
-            <div class="col-sm-10">
+            <label for="{{ field.label }}" class="col-sm-3 control-label">{{ field.label }}</label>
+            <div class="col-sm-9">
               {{ field }}
               {% if field.help_text %}
                 <span class="help-block">{{ field.help_text }}</span>
@@ -39,9 +38,8 @@
             </div>
           </div>
         {% endfor %}
-        
         <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
+          <div class="col-sm-offset-3 col-sm-9">
             <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
           </div>
         </div>
@@ -49,4 +47,3 @@
     </div>
   </div>
 {% endblock main %}
-
