--- a/core/templates/picture.html
+++ b/core/templates/picture.html
@@ -16,7 +16,7 @@
   </div>
   <div class="row" style="margin-top: 2em">
     <div class="col-md-3">
-      {% include 'core/partial_settings_menu.html' with active='picture' %}
+      {% include 'partial_settings_menu.html' with active='picture' %}
     </div>
     <div class="col-md-9">
       {% if messages %}
