--- a/feeds/templates/feed.html
+++ b/feeds/templates/feed.html
@@ -17,6 +17,6 @@
     <h1>Feed</h1>
   </div>
   <ul class="stream">
-    {% include 'feeds/partial_feed.html' with feed=feed %}
+    {% include 'partial_feed.html' with feed=feed %}
   </ul>
 {% endblock main %}
