--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <script src="{% static 'js/bootcamp.js' %}"></script>
     {% block head %}{% endblock %}
   </head>
-  <body>
+  <body style="padding-top: 40px">
     {% block body %}
       <header>
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -39,7 +39,7 @@
                   </a>
                 </li>
                 <li><a href="{% url 'feeds'  %}">Feed</a></li>
-                <li><a href="{% url 'blog'  %}">Blog</a></li>
+                <li><a href="{% url 'board' username %}">Board</a></li>
                 <li><a href="#">Articles</a></li>
                 <li><a href="#">Q&A</a></li>
                 <li><a href="#">Network</a></li>
