--- a/board/templates/board.html
+++ b/board/templates/board.html
@@ -6,21 +6,21 @@
 {% block title %}User List{% endblock %}
 
 {% block head %}
-<link href="{% static 'css/blog.css' %}" rel="stylesheet">
-<script src="{% static 'js/blog.js' %}"></script>
+<link href="{% static 'css/board.css' %}" rel="stylesheet">
+<script src="{% static 'js/board.js' %}"></script>
 {% endblock head %}
 
 {% block main %}  
 
 <div class="page-header">
-	<h1>{% trans 'Blog' %}</h1>
+	<h1>{% trans 'Board' %}</h1>
 </div>
 
-<div class="blogs">
+<div class="main">
 
-	<!--<button type = "button" onclick=" location.href='{% url 'add' %}' " class = "btn btn-primary">Add User</button>  -->
+	<!--<button type = "button" onclick=" location.href='{% url 'board' username %}' " class = "btn btn-primary">Add User</button>  -->
 
-	<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create Blog</button>
+	<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create Board</button>
 
 
 	<div class="modal fade" id="myModal" role="dialog">
@@ -30,26 +30,26 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4 class="modal-title">Blog Header</h4>
-
-
+					<h4 class="modal-title">Board Header</h4>
 				</div>
+				
 				<div class="modal-body">
-					<form role="form" id="createblog-form">
+					<form role="form" id="createboard-form">
 						{% csrf_token %}
-						<input type="hidden" name="last_blog">
+						<input type="hidden" name="last_board">
+						<input type="hidden" id="user_name" value={{username}}>
 						<div class="form-group">
-							<label for="inputdefault">Blog Title</label>
+							<label for="inputdefault">Board Title</label>
 							<input class="form-control" id="inputdefault" type="text" name="title">
 						</div>
 						<div class="form-group">
-							<label for="inputlg">Blog Content</label>
+							<label for="inputlg">Board Content</label>
 							<input class="form-control input-lg" id="inputlg" type="text" name="content">
 						</div>						
 					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default btn-create" data-dismiss="modal">Create</button>
+					<button type="button" class="btn btn-default btn-create"  data-dismiss="modal">Create</button>
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 				</div>
 			</div>
@@ -59,8 +59,9 @@
 
 
 	<div class="row">
-		{% for blog in blogs %}		
-			{% include 'blog/blog_item.html' with blog=blog %}
+		{% for board in boards %}		
+			{% include 'board_item.html' with board=board %}
 		{% endfor %}
 	</div>
+</div>
 	{% endblock main %}
