--- a/core/templates/settings.html
+++ b/core/templates/settings.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% get_available_languages as LANGUAGES %}
+{% get_current_language as CURRENT_LANGUAGE %}
 
-{% block title %}{% trans 'Account Settings' %}{% endblock %}
+{% block title %}Account Settings{% endblock %}
 
 {% block main %}
   <div class="page-header">
@@ -9,7 +11,7 @@
   </div>
   <div class="row" style="margin-top: 2em">
     <div class="col-md-3">
-      {% include 'core/partial_settings_menu.html' with active='password' %}
+      {% include 'partial_settings_menu.html' with active='profile' %}
     </div>
     <div class="col-md-9">
       {% if messages %}
@@ -20,14 +22,13 @@
           </div>
         {% endfor %}
       {% endif %}
-      <h3 style="margin-top: 0">{% trans 'Change Password' %}</h3>
-      <form role="form" class="form-horizontal" method="post" action="{% url 'password' %}">
+      <h3 style="margin-top: 0">{% trans 'Edit Profile' %}</h3>
+      <form role="form" class="form-horizontal" method="post" action="{% url 'settings' %}">
         {% csrf_token %}
-        {{ form.id }}
         {% for field in form.visible_fields %}
           <div class="form-group{% if field.errors %} has-error{% endif %}">
-            <label for="{{ field.label }}" class="col-sm-3 control-label">{{ field.label }}</label>
-            <div class="col-sm-9">
+            <label for="{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
+            <div class="col-sm-10">
               {{ field }}
               {% if field.help_text %}
                 <span class="help-block">{{ field.help_text }}</span>
@@ -38,8 +39,9 @@
             </div>
           </div>
         {% endfor %}
+        
         <div class="form-group">
-          <div class="col-sm-offset-3 col-sm-9">
+          <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
           </div>
         </div>
@@ -47,3 +49,4 @@
     </div>
   </div>
 {% endblock main %}
+
